WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315164
claude.ai: Quirk to work around chat stuck in infinite reload loop after logout
https://bugs.webkit.org/show_bug.cgi?id=315164
Summary
claude.ai: Quirk to work around chat stuck in infinite reload loop after logout
Chris Dumez
Reported
2026-05-19 22:42:46 PDT
Quirk to work around chat stuck in infinite reload loop after logout on claude.ai.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-05-19 22:42:52 PDT
rdar://174779259
Chris Dumez
Comment 2
2026-05-19 22:48:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65259
EWS
Comment 3
2026-05-20 20:28:53 PDT
Committed
313632@main
(505ef3ab0484): <
https://commits.webkit.org/313632@main
> Reviewed commits have been landed. Closing PR #65259 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug